--- a/src/components/App.css
+++ b/src/components/App.css
@@ -9,3 +9,19 @@ body,
 .pointer {
   cursor: pointer;
 }
+
+/* Messages.js */
+.messages {
+  height: 440px;
+  overflow-y: scroll;
+}
+
+/* MessageForm.js */
+.message__form {
+  position: fixed !important;
+  bottom: 1em;
+  margin-left: 320px !important;
+  left: 0;
+  right: 1em;
+  z-index: 200;
+}
